# music-topology

./: README.md
SoundscapeMap/: .env.example  .gitignore  README.md  docker-compose.yml  package-lock.json  package.json  soundscape_map_llm_prompt.md
SoundscapeMap/.github/workflows/: deploy.yml
SoundscapeMap/apps/web/: index.html  package.json  vite.config.ts
SoundscapeMap/apps/web/src/: App.tsx  main.tsx  styles.css
SoundscapeMap/apps/web/src/components/: Google3DMap.tsx  GoogleDeckMap.tsx  RegionPanel.tsx
SoundscapeMap/apps/web/src/map/: cornellTiles.ts  h3.ts  wsClient.ts
SoundscapeMap/apps/web/src/state/: useAppStore.ts
SoundscapeMap/docs/: API.md  ARCHITECTURE.md  ASSUMPTIONS.md  COMPLETION_AUDIT.md  PRIVACY.md  TESTING.md
SoundscapeMap/infra/caddy/: Caddyfile
SoundscapeMap/infra/db/migrations/: 001_init.sql
SoundscapeMap/loadtests/: vote-load.js
SoundscapeMap/monitoring/: alerts.yml  prometheus.yml
SoundscapeMap/monitoring/grafana/: cluster-quality-dashboard.json
SoundscapeMap/scripts/: integration-vote-flow.mjs  smoke-test.mjs
SoundscapeMap/services/api/: package.json
SoundscapeMap/services/api-spring/: pom.xml
SoundscapeMap/services/api/src/: config.ts  index.ts  types.ts
SoundscapeMap/services/api/src/infra/: db.ts  jwt.ts  rateLimiter.ts  redis.ts  spotifyCircuitBreaker.ts
SoundscapeMap/services/region/: pyproject.toml
SoundscapeMap/services/region/app/: main.py  pipeline.py  settings.py  taxonomy.py
SoundscapeMap/services/region/soundscapemap_region.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
(+43 files in other folders)
