[project]
name = "soundscapemap-region"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.111.0",
  "uvicorn>=0.30.1",
  "numpy>=1.26.4",
  "scikit-learn>=1.5.0",
  "hdbscan>=0.8.37",
  "h3>=4.1.0",
  "shapely>=2.0.4",
  "psycopg[binary]>=3.2.1",
  "redis>=5.0.7"
]

[tool.ruff]
line-length = 100
target-version = "py312"
